tests/transpiler/x/java/substring_builtin.error
exit status 1
Main.java:4: error: cannot find symbol
        System.out.println(substring("mochi", 1, 4));
                           ^
  symbol:   method substring(String,int,int)
  location: class Main
1 error
